--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -8,8 +8,10 @@
 @import "global/mixins";
 @import "global/button";
 @import "global/sprite";
-
+@import "global/icons";
+@import "sections/title";
 
 @import "sections/header";
 @import "sections/nav";
-@import "sections/hero"
+@import "sections/hero";
+@import "sections/about"
