New block Approch section add

--- a/source/styles/sections/title.scss
+++ b/source/styles/sections/title.scss
@@ -9,8 +9,9 @@
   }
 
   &__text {
-    font-size: 1.25rem;
+    font-size: 1.15rem;
     font-weight: 300;
+    margin-top: 5px;
   }
 
   &--with-bottom-line{
