--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -14,4 +14,6 @@
 @import "sections/header";
 @import "sections/nav";
 @import "sections/hero";
-@import "sections/about"
+@import "sections/about";
+@import "sections/approach";
+@import "sections/work";
