--- a/source/template/index.pug
+++ b/source/template/index.pug
@@ -10,7 +10,8 @@ html(lang='ru')
     include  sections/header
     include  sections/hero
     include  sections/about
-
+    include  sections/approch
+    include  sections/work
 
 
 
